--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "test": "nx run-many -t test",
     "test:affected": "nx affected -t test",
     "lint:packages": "nx run-many -t lint -p design-tokens,design-system,shared-utils",
-    "lint:base": "nx run workspace-format:lint:base",
-    "lint:typed": "nx run workspace-format:lint",
+    "lint:base": "pnpm exec biome lint .",
+    "lint:typed": "pnpm exec eslint --no-error-on-unmatched-pattern --max-warnings=0 --ext .js,.jsx,.ts,.tsx,.mjs,.cjs,.cts,.mts \"apps/docs/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"apps/workflows/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"apps/examples/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/token-*/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/tokens-*/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/ui-*/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/platform-bridges/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"tools/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\"",
     "lint:workspace": "pnpm run lint:base && pnpm run lint:typed",
     "lint:affected": "nx affected -t lint",
     "lint:css": "stylelint 'packages/**/*.{css,scss,sass}' --fix",
@@ -53,8 +53,8 @@
     "precommit:clean": "pnpm run clean:apple:staged",
     "autofix": "./scripts/autofix.sh",
     "autofix:safe": "./scripts/autofix.sh",
-    "format": "nx run workspace-format:format",
-    "format:check": "nx run workspace-format:format --configuration=check",
+    "format": "pnpm exec biome format --write .",
+    "format:check": "pnpm exec biome check --formatter-enabled=true --linter-enabled=false --assist-enabled=false --error-on-warnings .",
     "typecheck": "nx run-many -t typecheck",
     "visual-test": "nx run-many -t visual-test",
     "storybook": "nx run design-system:storybook",
