build: replace nx typecheck gate with tsc runner

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tauri dev",
     "build": "tauri build",
+    "typecheck": "tsc --noEmit --project tsconfig.json",
     "tauri": "tauri",
     "test": "vitest",
     "test:ui": "vitest --ui",
