--- a/packages/tokens-core/package.json
+++ b/packages/tokens-core/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "@mimic/design-tokens": "workspace:*",
     "@mimic/shared-utils": "workspace:*"
+  },
+  "scripts": {
+    "typecheck": "tsc --noEmit --project tsconfig.json"
   }
 }
