--- a/packages/ui-kernel/tsconfig.json
+++ b/packages/ui-kernel/tsconfig.json
@@ -4,6 +4,6 @@
     "noEmit": true,
     "rootDir": "src"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": ["dist", "node_modules"]
 }
