--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "typecheck": "tsc --noEmit --project tsconfig.json",
     "test": "jest",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "clean": "react-native clean",
