--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "typecheck": "pnpm run build.types",
     "postbuild:clean": "../../scripts/postbuild-chain.sh dist --validate",
     "deploy": "wrangler pages deploy ./dist",
     "dev": "vite --mode ssr",
