--- a/packages/ui-adapters/tsconfig.json
+++ b/packages/ui-adapters/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "../../toolchains/tsconfig.base.json",
   "compilerOptions": {
     "noEmit": true,
-    "rootDir": "src"
+    "rootDir": "."
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "react/src/**/*.ts", "solid/src/**/*.ts", "vue/src/**/*.ts", "svelte/src/**/*.ts"],
   "exclude": ["dist", "node_modules"]
 }
