--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -5,8 +5,7 @@
     "moduleResolution": "Bundler",
     "jsx": "react-jsx",
     "noEmit": true,
-    "skipLibCheck": true,
-    "ignoreDeprecations": "6.0"
+    "skipLibCheck": true
   },
   "include": ["src", "src/**/*.ts", "src/**/*.tsx", "src/__tests__/**/*.ts"],
   "exclude": ["node_modules", "dist"]
