--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,16 @@
 {
   "extends": "./toolchains/tsconfig.base.json",
-  "include": ["packages/*/src/**/*", "packages/*/**/src/**/*", "apps/*/src/**/*", "apps/*/**/src/**/*", "apps/*/**/*.ts", "apps/*/**/*.tsx", "apps/*/**/*.js", "apps/*/**/*.jsx", "tools/*/src/**/*", "mimic-token-cli/src/**/*"],
+  "include": [
+    "packages/*/src/**/*",
+    "packages/*/**/src/**/*",
+    "apps/*/src/**/*",
+    "apps/*/**/src/**/*",
+    "apps/*/**/*.ts",
+    "apps/*/**/*.tsx",
+    "apps/*/**/*.js",
+    "apps/*/**/*.jsx",
+    "tools/*/src/**/*",
+    "mimic-token-cli/src/**/*"
+  ],
   "exclude": ["node_modules", "**/node_modules", "**/dist", "**/build", "toolchains/**"]
 }
