--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -13,14 +13,14 @@
     "!**/node_modules/**",
     "!.git/**",
     "!.trunk/**",
-    "!.nx/**"
+    "!.nx/**",
   ],
   "config": {
     "MD013": {
       "line_length": 120,
       "headings": false,
       "code_blocks": false,
-      "tables": false
+      "tables": false,
     },
     "MD024": false,
     "MD033": false,
@@ -29,11 +29,11 @@
     "MD026": false,
     "MD037": false,
     "MD007": {
-      "indent": 2
+      "indent": 2,
     },
     "MD029": false,
     "MD010": {
-      "code_blocks": false
-    }
-  }
+      "code_blocks": false,
+    },
+  },
 }
