--- a/packages/shared-utils/project.json
+++ b/packages/shared-utils/project.json
@@ -24,6 +24,7 @@
     },
     "test": {
       "executor": "@nx/vite:test",
+      "dependsOn": [],
       "outputs": ["{options.reportsDirectory}"],
       "options": {
         "passWithNoTests": true,
