ci: fail pr typecheck on nx errors

--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -33,7 +33,12 @@ jobs:
         run: pnpm nx affected -t lint --parallel=4
 
       - name: Typecheck (affected)
-        run: pnpm nx affected -t typecheck --parallel=3 || true
+        id: typecheck_affected
+        run: pnpm nx affected -t typecheck --parallel=3
+
+      - name: Typecheck fallback (sequential)
+        if: ${{ failure() && steps.typecheck_affected.conclusion == 'failure' }}
+        run: pnpm typecheck
 
       - name: Unit tests (affected)
         run: pnpm nx affected -t test --parallel=3
