--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,28 @@ jobs:
   module-boundaries:
     name: Enforce Module Boundaries
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+
+      - name: Restore Nx cache
+        uses: actions/cache@v4
+        with:
+          path: tmp/nx-cache
+          key: ${{ runner.os }}-nx-${{ hashFiles('pnpm-lock.yaml', 'nx.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nx-
+
+      - name: Export Nx Cloud token
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          NX_TOKEN="$(gh variable get NX_CLOUD_ACCESS_TOKEN -R \"$GITHUB_REPOSITORY\" --json value --jq '.value' 2>/dev/null || true)"
+          if [ -n "$NX_TOKEN" ]; then
+            echo "NX_CLOUD_ACCESS_TOKEN=$NX_TOKEN" >> "$GITHUB_ENV"
+          fi
 
       - name: Cleanup Apple metadata (pre-install)
         run: node tools/apple-cleaner.js --mode=full
@@ -101,7 +117,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: module-boundaries
     if: always()
-
     steps:
       - name: Report Success
         if: needs.module-boundaries.result == 'success'
@@ -116,5 +131,4 @@ jobs:
         if: needs.module-boundaries.result == 'failure'
         run: |
           echo "❌ Module boundary enforcement: FAILED"
-          echo "Please check the logs above for specific violations"
           exit 1
