--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -15,11 +15,28 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Restore Nx cache
+        uses: actions/cache@v4
+        with:
+          path: tmp/nx-cache
+          key: ${{ runner.os }}-nx-${{ hashFiles('pnpm-lock.yaml', 'nx.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nx-
+
+      - name: Export Nx Cloud token
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          NX_TOKEN="$(gh variable get NX_CLOUD_ACCESS_TOKEN -R \"$GITHUB_REPOSITORY\" --json value --jq '.value' 2>/dev/null || true)"
+          if [ -n "$NX_TOKEN" ]; then
+            echo "NX_CLOUD_ACCESS_TOKEN=$NX_TOKEN" >> "$GITHUB_ENV"
+          fi
+
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: '22.20.0'
-          cache: 'pnpm'
+          node-version: 22.20.0
+          cache: pnpm
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
