--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Start Nx self-healing run
+        run: |
+          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
+            pnpm exec nx start-ci-run --no-distribution --fix-tasks="*lint*,*format*"
+          else
+            echo "Skipping Nx self-healing bootstrap (NX_CLOUD_ACCESS_TOKEN not set)"
+          fi
+
       - name: Run ESLint module boundary checks
         run: pnpm nx run-many -t lint --parallel --maxParallel=4
 
@@ -111,6 +119,15 @@ jobs:
             fi
           fi
           echo "✅ Token outputs are collision-safe"
+
+      - name: Apply Nx self-healing fixes
+        if: always()
+        run: |
+          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
+            pnpm exec nx fix-ci
+          else
+            echo "Skipping Nx self-healing fix (NX_CLOUD_ACCESS_TOKEN not set)"
+          fi
 
   report-status:
     name: Report Module Boundary Status
