--- a/.github/workflows/visual-tests.yml
+++ b/.github/workflows/visual-tests.yml
@@ -49,6 +49,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Start Nx self-healing run
+        run: |
+          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
+            pnpm exec nx start-ci-run --no-distribution --fix-tasks="*lint*,*format*"
+          else
+            echo "Skipping Nx self-healing bootstrap (NX_CLOUD_ACCESS_TOKEN not set)"
+          fi
+
       - name: Build design tokens
         run: pnpm nx run design-tokens:build
 
@@ -82,3 +90,12 @@ jobs:
           git add packages/design-system/.loki/reference/
           git commit -m "Update Loki reference images" || exit 0
           git push
+
+      - name: Apply Nx self-healing fixes
+        if: always()
+        run: |
+          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
+            pnpm exec nx fix-ci
+          else
+            echo "Skipping Nx self-healing fix (NX_CLOUD_ACCESS_TOKEN not set)"
+          fi
