chore(tools): add realtime apple junk watcher

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clean": "nx reset && rm -rf node_modules && pnpm install",
     "clean:apple": "node tools/apple-cleaner.js",
     "clean:apple:staged": "node tools/apple-cleaner.js --mode=staged",
+    "clean:apple:watch": "node tools/apple-cleaner-watch.js",
     "check:apple": "node tools/apple-cleaner.js --mode=check",
     "clean:ds-store": "find . -name '.DS_Store' -type f -delete && find . -name '._*' -type f -delete",
     "clean:xcode": "find . -name '*.xcuserdata*' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name 'xcuserdata' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name '*.xcworkspace/xcuserdata' -type d -exec rm -rf {} + 2>/dev/null || true",
@@ -125,6 +126,7 @@
     "@types/node": "24.7.2",
     "@typescript-eslint/eslint-plugin": "8.46.0",
     "@typescript-eslint/parser": "8.46.0",
+    "chokidar": "4.0.3",
     "chromatic": "13.3.0",
     "concurrently": "9.2.1",
     "cross-env": "10.1.0",
