--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -46,6 +46,27 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Detect documentation changes
+        id: docs_changes
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            docs:
+              - '**/*.md'
+              - '**/*.mdx'
+              - '!**/node_modules/**'
+              - '!**/.pnpm/**'
+              - '!**/dist/**'
+              - '!**/build/**'
+              - '!**/.next/**'
+              - '!**/coverage/**'
+              - '!**/storybook-static/**'
+              - '!**/.turbo/**'
+              - '!**/.cache/**'
+              - '!**/.git/**'
+              - 'config.markdownlint-cli2.jsonc'
+              - 'example.markdownlint-cli2.jsonc'
+
       - name: Lint (affected)
         run: pnpm nx affected -t lint --parallel=4
 
@@ -65,5 +86,5 @@ jobs:
         run: pnpm nx affected -t build --parallel=3
 
       - name: Markdown lint (docs only)
-        if: ${{ contains(github.event.pull_request.changed_files, 'docs/') }}
+        if: ${{ steps.docs_changes.outputs.docs == 'true' }}
         run: pnpm lint:md
