--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,11 +55,8 @@ jobs:
 
       - name: Start Nx self-healing run
         run: |
-          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
-            pnpm exec nx start-ci-run --no-distribution --fix-tasks="*lint*,*format*"
-          else
-            echo "Skipping Nx self-healing bootstrap (NX_CLOUD_ACCESS_TOKEN not set)"
-          fi
+          pnpm exec nx start-ci-run --no-distribution --fix-tasks="*lint*,*format*" \
+            || echo "Nx self-healing bootstrap skipped (token missing or feature disabled)"
 
       - name: Run ESLint module boundary checks
         run: pnpm nx run-many -t lint --parallel --maxParallel=4
@@ -123,11 +120,8 @@ jobs:
       - name: Apply Nx self-healing fixes
         if: always()
         run: |
-          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
-            pnpm exec nx fix-ci
-          else
-            echo "Skipping Nx self-healing fix (NX_CLOUD_ACCESS_TOKEN not set)"
-          fi
+          pnpm exec nx fix-ci \
+            || echo "Nx self-healing fixes not applied (token missing or no fixes available)"
 
   report-status:
     name: Report Module Boundary Status
