--- a/.github/workflows/visual-tests.yml
+++ b/.github/workflows/visual-tests.yml
@@ -51,11 +51,8 @@ jobs:
 
       - name: Start Nx self-healing run
         run: |
-          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
-            pnpm exec nx start-ci-run --no-distribution --fix-tasks="*lint*,*format*"
-          else
-            echo "Skipping Nx self-healing bootstrap (NX_CLOUD_ACCESS_TOKEN not set)"
-          fi
+          pnpm exec nx start-ci-run --no-distribution --fix-tasks="*lint*,*format*" \
+            || echo "Nx self-healing bootstrap skipped (token missing or feature disabled)"
 
       - name: Build design tokens
         run: pnpm nx run design-tokens:build
@@ -94,8 +91,5 @@ jobs:
       - name: Apply Nx self-healing fixes
         if: always()
         run: |
-          if [ -n "$NX_CLOUD_ACCESS_TOKEN" ]; then
-            pnpm exec nx fix-ci
-          else
-            echo "Skipping Nx self-healing fix (NX_CLOUD_ACCESS_TOKEN not set)"
-          fi
+          pnpm exec nx fix-ci \
+            || echo "Nx self-healing fixes not applied (token missing or no fixes available)"
