--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ DEBUG=design-tokens:*
 # PENPOT_FILE_ID=01234567-89ab-cdef-0123-456789abcdef
 # PENPOT_ACCESS_TOKEN=ptok_1234567890abcdef1234567890abcdef12345678
 # PENPOT_TEAM_ID=98765432-10fe-dcba-9876-543210fedcba
+
+# Nx Cloud (self-healing, distributed caching)
+# Generate this token from https://cloud.nx.app/ → Workspace settings → Access tokens.
+NX_CLOUD_ACCESS_TOKEN=
