--- a/apps/desktop/project.json
+++ b/apps/desktop/project.json
@@ -7,33 +7,33 @@
     "tauri": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd apps/desktop && tauri dev"
+        "command": "pnpm --filter @mimic/desktop tauri dev"
       },
       "configurations": {
         "dev": {
-          "command": "cd apps/desktop && tauri dev"
+          "command": "pnpm --filter @mimic/desktop tauri dev"
         },
         "build": {
-          "command": "cd apps/desktop && if [ \"${TAURI_ENABLE_BUILD:-true}\" = \"true\" ]; then if command -v tauri >/dev/null 2>&1; then tauri build; else echo '❌ Tauri CLI not found; install it or set TAURI_ENABLE_BUILD=false to skip'; exit 1; fi; else echo 'ℹ️ TAURI_ENABLE_BUILD set to false; skipping desktop build'; fi"
+          "command": "if [ \"${TAURI_ENABLE_BUILD:-true}\" = \"true\" ]; then pnpm --filter @mimic/desktop tauri build; else echo 'ℹ️ TAURI_ENABLE_BUILD set to false; skipping desktop build'; fi"
         }
       }
     },
     "dev": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd apps/desktop && tauri dev"
+        "command": "pnpm --filter @mimic/desktop tauri dev"
       }
     },
     "build": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd apps/desktop && if [ \"${TAURI_ENABLE_BUILD:-true}\" = \"true\" ]; then if command -v tauri >/dev/null 2>&1; then tauri build; else echo '❌ Tauri CLI not found; install it or set TAURI_ENABLE_BUILD=false to skip'; exit 1; fi; else echo 'ℹ️ TAURI_ENABLE_BUILD set to false; skipping desktop build'; fi"
+        "command": "if [ \"${TAURI_ENABLE_BUILD:-true}\" = \"true\" ]; then pnpm --filter @mimic/desktop tauri build; else echo 'ℹ️ TAURI_ENABLE_BUILD set to false; skipping desktop build'; fi"
       }
     },
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd apps/desktop && tauri dev"
+        "command": "pnpm --filter @mimic/desktop tauri dev"
       }
     },
     "test": {
