--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
+    "globals": "16.4.0",
     "glob": "11.0.3",
     "husky": "9.1.7",
     "jiti": "2.6.1",
