--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ packages/design-tokens/libs/tokens/
 .parcel-cache/
 
 # Environment variables and secrets
-# .env
+.env
 .env.*
 !.env.example
 !.env.template
