--- a/.github/workflows/visual-tests.yml
+++ b/.github/workflows/visual-tests.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   loki-visual-tests:
     runs-on: ubuntu-latest
+    env:
+      NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
 
     steps:
       - name: Checkout
@@ -29,14 +31,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nx-
 
-      - name: Export Nx Cloud token
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          NX_TOKEN="$(gh variable get NX_CLOUD_ACCESS_TOKEN -R \"$GITHUB_REPOSITORY\" --json value --jq '.value' 2>/dev/null || true)"
-          if [ -n "$NX_TOKEN" ]; then
-            echo "NX_CLOUD_ACCESS_TOKEN=$NX_TOKEN" >> "$GITHUB_ENV"
-          fi
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
