--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -9,6 +9,8 @@ jobs:
   verify:
     name: Lint • Typecheck • Test • Build (affected)
     runs-on: ubuntu-latest
+    env:
+      NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
 
     steps:
       - name: Checkout repository
@@ -24,15 +26,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nx-
 
-      - name: Export Nx Cloud token
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          NX_TOKEN="$(gh variable get NX_CLOUD_ACCESS_TOKEN -R \"$GITHUB_REPOSITORY\" --json value --jq '.value' 2>/dev/null || true)"
-          if [ -n "$NX_TOKEN" ]; then
-            echo "NX_CLOUD_ACCESS_TOKEN=$NX_TOKEN" >> "$GITHUB_ENV"
-          fi
-
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
@@ -47,7 +40,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Configure Nx Cloud environment
+        run: scripts/configure-nx-cloud.sh
+
       - name: Start Nx self-healing run
+        if: env.NX_CLOUD_ACCESS_TOKEN != ''
         run: |
           pnpm exec nx start-ci-run --no-distribution --fix-tasks="*lint*,*format*" \
             || echo "Nx self-healing bootstrap skipped (token missing or feature disabled)"
@@ -74,7 +71,7 @@ jobs:
         run: pnpm lint:md
 
       - name: Apply Nx self-healing fixes
-        if: always()
+        if: always() && env.NX_CLOUD_ACCESS_TOKEN != ''
         run: |
           pnpm exec nx fix-ci \
             || echo "Nx self-healing fixes not applied (token missing or no fixes available)"
