--- a/package.json
+++ b/package.json
@@ -137,8 +137,8 @@
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
-    "globals": "16.4.0",
     "glob": "11.0.3",
+    "globals": "16.4.0",
     "husky": "9.1.7",
     "jiti": "2.6.1",
     "jsdom": "27.0.0",
@@ -146,6 +146,7 @@
     "markdownlint-cli2": "0.18.1",
     "npm-run-all2": "8.0.4",
     "nx": "21.6.4",
+    "nx-cloud": "^19.1.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "rimraf": "6.0.1",
