--- a/.biomeignore
+++ b/.biomeignore
@@ -1,15 +1,1 @@
-**/dist/**
-**/build/**
-**/lib/**
-**/.next/**
-**/.turbo/**
-**/.nx/**
-**/.nx-cache/**
-**/storybook-static/**
-**/coverage/**
-**/.trunk/out/**
-**/.trunk/actions/**
-**/.trunk/notifications/**
-**/.trunk/tools/**
-**/*.generated.*
-**/*.gen.*
+.trunk/**
