--- a/apps/mobile/jest.config.json
+++ b/apps/mobile/jest.config.json
@@ -1,10 +1,7 @@
 {
   "preset": "react-native",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
-  "testMatch": [
-    "**/__tests__/**/*.(ts|tsx|js)",
-    "**/*.(test|spec).(ts|tsx|js)"
-  ],
+  "testMatch": ["**/__tests__/**/*.(ts|tsx|js)", "**/*.(test|spec).(ts|tsx|js)"],
   "collectCoverageFrom": ["src/**/*.{ts,tsx}", "!src/**/*.d.ts"],
   "setupFilesAfterEnv": ["<rootDir>/jest-setup.ts"],
   "moduleNameMapper": {
