feat(workspace): add token orchestrator pipeline

--- a/package.json
+++ b/package.json
@@ -65,10 +65,11 @@
     "build-storybook": "nx run design-system:build-storybook",
     "tokens:build": "nx run design-tokens:build",
     "tokens:build-all": "cross-env NX_NO_CLOUD=true nx run design-tokens:build && cross-env NX_NO_CLOUD=true nx run-many -t build --exclude=workspace-format",
-    "tokens:sync": "nx run design-tokens:tokens:sync",
+    "tokens:orchestrate": "cargo run --manifest-path packages/token-orchestrator/Cargo.toml --bin mimic-token-orchestrator",
+    "tokens:sync": "pnpm run tokens:orchestrate && nx run design-tokens:tokens:sync",
     "tokens:sync-all": "cross-env NX_NO_CLOUD=true nx run design-tokens:tokens:sync && cross-env NX_NO_CLOUD=true nx run-many -t build --exclude=workspace-format --skip-nx-cache",
     "tokens:watch": "nx run design-tokens:watch",
-    "tokens:validate": "node -e \"const { runTokenContractValidation } = require('./packages/shared-utils/dist/token-contract-validation.js'); runTokenContractValidation();\"",
+    "tokens:validate": "pnpm run tokens:orchestrate -- --validate-only && node -e \"const { runTokenContractValidation } = require('./packages/shared-utils/dist/token-contract-validation.js'); runTokenContractValidation();\"",
     "tokens:check-drift": "echo '🔍 Checking for token drift...' && echo 'Drift check placeholder - would compare with Penpot'",
     "tokens:diff": "echo '📊 Token diff placeholder - would show changes between versions'",
     "tokens:monitor": "echo '👀 Token monitoring placeholder - would start continuous monitoring'",
