--- a/packages/token-orchestrator/Cargo.toml
+++ b/packages/token-orchestrator/Cargo.toml
@@ -2,10 +2,40 @@
 name = "mimic-token-orchestrator"
 version = "0.0.0"
 edition = "2021"
-description = "Rust CLI for Mimic token orchestration (placeholder)"
+description = "Rust CLI for Mimic token orchestration"
 
 [lib]
 name = "mimic_token_orchestrator"
 path = "src/lib.rs"
+crate-type = ["rlib", "cdylib"]
+
+[[bin]]
+name = "mimic-token-orchestrator"
+path = "src/main.rs"
+
+[features]
+default = ["telemetry"]
+telemetry = [
+    "dep:opentelemetry",
+    "dep:opentelemetry_sdk",
+    "dep:tracing-opentelemetry",
+]
+airgap = []
 
 [dependencies]
+clap = { version = "4.5.20", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
+opentelemetry = { version = "0.23", optional = true, features = ["trace"] }
+opentelemetry_sdk = { version = "0.23", optional = true, features = ["trace"] }
+tracing-opentelemetry = { version = "0.24", optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+
+[profile.release]
+lto = true
+codegen-units = 1
