--- a/packages/token-orchestrator/project.json
+++ b/packages/token-orchestrator/project.json
@@ -4,5 +4,30 @@
   "projectType": "library",
   "sourceRoot": "packages/token-orchestrator/src",
   "tags": ["scope:tokens", "type:rust"],
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nx/workspace:run-commands",
+      "options": {
+        "command": "cargo build --manifest-path packages/token-orchestrator/Cargo.toml --release"
+      }
+    },
+    "build:wasm": {
+      "executor": "@nx/workspace:run-commands",
+      "options": {
+        "command": "cargo build --manifest-path packages/token-orchestrator/Cargo.toml --release --target wasm32-unknown-unknown"
+      }
+    },
+    "test": {
+      "executor": "@nx/workspace:run-commands",
+      "options": {
+        "command": "cargo test --manifest-path packages/token-orchestrator/Cargo.toml --all-features"
+      }
+    },
+    "fmt": {
+      "executor": "@nx/workspace:run-commands",
+      "options": {
+        "command": "cargo fmt --manifest-path packages/token-orchestrator/Cargo.toml -- --check"
+      }
+    }
+  }
 }
